test/Fail/Issue2985.err
Issue2985.agda:22.1-23.44: error: [TerminationIssue]
Termination checking failed for the following functions:
  u
Problematic calls:
  λ { .Unit.force j → u j }
    (at Issue2985.agda:23.18-43)
  u j
    (at Issue2985.agda:23.38-39)
